Merged revisions 44763 via svnmerge from https://www.ja-sig.org/svn/uPortal/trunk
........
  r44763 | edalquist | 2009-02-05 21:40:04 -0600 (Thu, 05 Feb 2009) | 1 line
  
  UP-2187 Increase permgen for quickstart tomcat to 384MB
........


git-svn-id: https://source.jasig.org/uPortal/branches/rel-3-0-patches@16782 f5dbab47-78f9-eb45-b975-e544023573eb